syntax = "proto3";

package views_count;

message IncrementStoryViewRequest {
  string hashid = 1;
  string fingerprint = 2;
}

message Empty {};

message StatusResponse {
  bool success = 1;
}

service ViewsCount {
  rpc IncrementStoryView(IncrementStoryViewRequest) returns (StatusResponse);
}
